[package]
authors = ["Harrison Goldstein <hgoldstein95@gmail.com>"]
edition = "2018"
name = "morsql"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.0"
quickcheck = "1.0"
regex = "1"

[dev-dependencies]
quickcheck_macros = "1.0"
